# VPN-Panel

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  start-backend.bat  start-frontend.bat  start-hostagent.bat
admin/: index.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  router.py  users.py  vpn.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py  permissions.py
backend/app/models/: __init__.py  audit_log.py  mixins.py  user.py  vpn_client.py  vpn_server.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py  users.py  vpn.py
backend/app/services/: audit_service.py  auth_service.py  bootstrap.py  hostagent_client.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
docs/: 00_PROJECT_OVERVIEW.md  01_CONTEXT.md  02_ARCHITECTURE.md  03_PROJECT_STRUCTURE.md  04_TECH_STACK.md  05_DEVELOPMENT_RULES.md  06_CODING_STANDARDS.md  07_DATABASE.md  08_API.md  09_UI_UX.md  10_SECURITY.md  11_DEPLOYMENT.md  12_ROADMAP.md  13_DECISIONS.md  14_CHANGELOG.md  LOCAL_DEVELOPMENT.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
hostagent/: Dockerfile  pyproject.toml
hostagent/app/: api.py  config.py  main.py  security.py
infrastructure/nginx/: default.conf
login/: index.html
