[project]
name = "vpn-panel-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "structlog>=24.4,<26",
  "PyJWT>=2.9,<3",
  "pwdlib[argon2]>=0.2,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
