[project]
name = "vpn-panel-hostagent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.4,<3",
  "structlog>=24.4,<26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
